--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-asgiref==3.4.1
-backports.zoneinfo==0.2.1
-dj-database-url==0.5.0
-Django==4.0
-django-cors-headers==3.10.1
-django-filter==21.1
-django-heroku==0.0.0
-djangorestframework==3.13.1
-gunicorn==20.1.0
-pytz==2021.3
-sqlparse==0.4.2
+Django
+django-cors-headers
+django-filter
+django-heroku
+djangorestframework
+gunicorn
 whitenoise==5.3.0
